# hackithon-ujep-2025

./: .env.example  DockerFile  Dockerfile  docker-compose.yml  pyproject.toml  xdent-test.db  xdent.db
app/: main.py
app/dcuk/: main.py
app/dcuk/api/: data_mqtt.py  mqtt.py
app/dcuk/infrastructure/: mqtt_client.py
app/xdent/: dependencies.py  main.py
app/xdent/api/: pacient.py  reports.py  routers.py
app/xdent/core/: settings.py
app/xdent/infrastructure/: database.py  ollama_client.py
app/xdent/interfaces/: ai_repository.py  data_repository.py  data_service.py  pacient_repository.py  pacient_service.py  report_repository.py  report_service.py
app/xdent/models/: xdent.py
app/xdent/repositories/: ai_repository.py  data_repository.py  pacient_repository.py  report_repository.py
app/xdent/schemas/: structured_data.py
app/xdent/services/: data_service.py  pacient_service.py  report_service.py
app/xdent/sources/: original_data.json  structured_output.json
